升级到 JDK 21
版本升级：
- Java: 17 → 21

依赖更新：
- Lombok: 1.18.24 → 1.18.36（JDK 21 需要 1.18.30+）
- JNA: 5.12.1 → 5.16.0
- commons-io: 2.5 → 2.18.0

代码修复：
- 废弃 API: URL(String) → URI.create().toURL()
- 影响文件: TestSocksProxy.java, TestTunProxy.java

验证结果：
- ✅ Maven 构建成功（BUILD SUCCESS）